# TAoPSQL

./: README.md  docker-compose.yml  pyproject.toml
chapter-01/: async-factbook.py  factbook.py  load-factbook.sql  prepared-statement-factbook.sql  query-factbook-formated.sql  query-factbook-wow.sql  query-factbook.sql
chapter-04/: function-get-all-albums-by-id.sql  function-get-all-albums-by-name.sql  function-get-all-albums-procedural.sql  query-albums-and-duration.py  query-albums-and-duration.sql  query-artists-with-four-albums.sql  query-tracks-and-derived-info-from-album.sql  query-tracks-and-genre-from-album.sql  query-tracks-from-album.sql  query-with-function-lateral-join.sql  query-with-function-subquery.sql
