[tool.poetry]
name = "taopsql"
version = "0.1.0"
description = ""
authors = ["Yung-Jin (Joey) Hu <yungjinhu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.8.6"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
